[ANCHOR-525] SEP-6: Fix `NotifyAmountsUpdatedHandler` (#1200)
### Description

This fixes the implementation of the `NotifyAmountsUpdatedHandler` so
that it matches the SEP-24 behaviour.

### Context

Previously, this was used incorrectly to update fees.

### Testing

- `./gradlew test`

### Documentation

N/A

### Known limitations

N/A